add solr for indexing

--- a/dev.cfg
+++ b/dev.cfg
@@ -2,6 +2,7 @@
 extends =
     base.cfg
     amqp.cfg
+    solr.cfg
     versions-dev.cfg
 
 parts +=
@@ -31,6 +32,7 @@ auto-checkout =
     collective.eeafaceted.collectionwidget
     collective.eeafaceted.dashboard
     collective.eeafaceted.z3ctable
+    collective.excelexport
 #    collective.fontawesome
     collective.iconifiedcategory
     collective.messagesviewlet
@@ -76,12 +78,14 @@ zcml +=
 # create bin/test command
 [test]
 recipe = zc.recipe.testrunner
-defaults = ['--auto-color', '--auto-progress']
+;defaults = ['--auto-color', '--auto-progress']
+defaults = ['--auto-color', '--auto-progress', '-s', 'Products.PloneMeeting']
 #extra-paths = ${buildout:directory}/parts/omelette
 #include-site-packages = true
 eggs =
+    collective.solr
+    collective.indexing
     Products.PloneMeeting [test]
-
 environment = testenv
 
 [testenv]
