--- a/sources.cfg
+++ b/sources.cfg
@@ -24,6 +24,7 @@ collective.eeafaceted.batchactions = git ${remotes:imio}/collective.eeafaceted.b
 collective.eeafaceted.collectionwidget = git ${remotes:collective}/collective.eeafaceted.collectionwidget.git pushurl=${remotes:collective_push}/collective.eeafaceted.collectionwidget.git
 collective.eeafaceted.dashboard = git ${remotes:collective}/collective.eeafaceted.dashboard.git pushurl=${remotes:collective_push}/collective.eeafaceted.dashboard.git
 collective.eeafaceted.z3ctable = git ${remotes:collective}/collective.eeafaceted.z3ctable.git pushurl=${remotes:collective_push}/collective.eeafaceted.z3ctable.git
+collective.excelexport = git ${remotes:collective}/collective.excelexport.git pushurl=${remotes:collective_push}/collective.excelexport.git rev=676588ee518c99e807d45cc88ed34e17cd4f780e
 collective.fingerpointing = git ${remotes:collective}/collective.fingerpointing.git pushurl=${remotes:collective_push}/collective.fingerpointing.git
 collective.fontawesome = git ${remotes:collective}/collective.fontawesome.git pushurl=${remotes:collective_push}/collective.fontawesome.git
 collective.iconifiedcategory = git ${remotes:collective}/collective.iconifiedcategory.git pushurl=${remotes:collective_push}/collective.iconifiedcategory.git
@@ -49,7 +50,7 @@ imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=solr
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
 [port]
