Added solr profile for liege

--- a/liege-dev.cfg
+++ b/liege-dev.cfg
@@ -22,6 +22,11 @@ Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${
 [testliege]
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingLiege']
+#extra-paths = ${buildout:directory}/parts/omelette
+#include-site-packages = true
 eggs =
-    Products.MeetingLiege[test]
+    collective.solr
+    collective.indexing
+    Products.MeetingLiege [test]
 environment = testenv
+
