--- a/port.cfg
+++ b/port.cfg
@@ -37,3 +37,4 @@ public-url = http://localhost:8081/Plone
 logs-server = localhost:5544
 solr-min-ram = 128M
 solr-max-ram = 256M
+solr-config = config/communes
