--- a/solr.cfg
+++ b/solr.cfg
@@ -32,15 +32,14 @@ eggs+= collective.solr
 [core-prop]
 recipe = collective.recipe.template
 input = config/core.properties.tmpl
-output = config/core.properties
+output = ${port:solr-config}/core.properties
 
 [solr]
 recipe = kitconcept.recipe.solr
 src = http://archive.apache.org/dist/lucene/solr/7.4.0/solr-7.4.0.tgz
-solr-config = config
+solr-config = ${port:solr-config}
 port = ${port:instance-solr-http}
 java_opts =
     -server
     -Xms${port:solr-min-ram}
     -Xmx${port:solr-max-ram}
-
