updated config files

--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -3,6 +3,7 @@ extends =
     communes-dev.cfg
     https://raw.githubusercontent.com/IMIO/buildout.jenkins/master/jenkins.cfg
     versions-jenkins.cfg
+#    solr.cfg
 
 source-directory = ${buildout:directory}/src
 
