--- a/solr.cfg
+++ b/solr.cfg
@@ -29,6 +29,18 @@ six = 1.11.0
 eggs+= collective.solr
        collective.indexing
 
+[test]
+eggs+= collective.solr
+       collective.indexing
+
+[testmc]
+eggs+= collective.solr
+       collective.indexing
+
+[testliege]
+eggs+= collective.solr
+       collective.indexing
+
 [core-prop]
 recipe = collective.recipe.template
 input = config/core.properties.tmpl
