--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,8 @@
 [buildout]
 
 extends =
-#    communes.cfg
-    communes-dev.cfg
+    communes.cfg
+#    communes-dev.cfg
 #    bep.cfg
 #    bep-dev.cfg
 #    charleroi.cfg
@@ -26,5 +26,5 @@ extends =
 #    seraing.cfg
 #    seraing-dev.cfg
 #
-    solr.cfg
+#    solr.cfg
 #    ldap.cfg
