--- a/dev.cfg
+++ b/dev.cfg
@@ -31,6 +31,7 @@ auto-checkout =
     collective.eeafaceted.collectionwidget
     collective.eeafaceted.dashboard
     collective.eeafaceted.z3ctable
+    collective.excelexport
 #    collective.fontawesome
     collective.iconifiedcategory
     collective.messagesviewlet
@@ -76,12 +77,11 @@ zcml +=
 # create bin/test command
 [test]
 recipe = zc.recipe.testrunner
-defaults = ['--auto-color', '--auto-progress']
+defaults = ['--auto-color', '--auto-progress', '-s', 'Products.PloneMeeting']
 #extra-paths = ${buildout:directory}/parts/omelette
 #include-site-packages = true
 eggs =
     Products.PloneMeeting [test]
-
 environment = testenv
 
 [testenv]
