--- a/port.cfg
+++ b/port.cfg
@@ -7,22 +7,25 @@ instance5-http = 8085
 instance6-http = 8086
 instance7-http = 8087
 instance8-http = 8088
+instance-solr-host = 127.0.0.1
+instance-solr-http = 8988
 instance-debug-http = 8080
-instance-debug-monitor = 8888
+instance-debug-monitor = 9888
 instance-async-http = 8089
-instance-async-monitor = 8090
+instance-async-monitor = 9090
 instance-amqp-http = 8286
-instance-amqp-monitor = 8285
+instance-amqp-monitor = 9285
 zeo = 8100
-zeo-monitor = 8101
-instance1-monitor = 8181
-instance2-monitor = 8182
-instance3-monitor = 8183
-instance4-monitor = 8184
-instance5-monitor = 8185
-instance6-monitor = 8186
-instance7-monitor = 8187
-instance8-monitor = 8188
+zeo-monitor = 9100
+instance1-monitor = 9181
+instance2-monitor = 9182
+instance3-monitor = 9183
+instance4-monitor = 9184
+instance5-monitor = 9185
+instance6-monitor = 9186
+instance7-monitor = 9187
+instance8-monitor = 9188
+instance-solr-monitor = 9988
 admin-password = admin
 plone-path = Plone
 cluster = pm_pm41
@@ -32,3 +35,6 @@ zodb-cache-size = 100000
 zeo-client-cache-size = 1000MB
 public-url = http://localhost:8081/Plone
 logs-server = localhost:5544
+solr-min-ram = 128M
+solr-max-ram = 256M
+solr-config = config/communes
