Make solr integration into other .cfg not change solr.cfg that is for production

--- a/charleroi-dev.cfg
+++ b/charleroi-dev.cfg
@@ -27,5 +27,6 @@ Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pu
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCharleroi']
 eggs =
+    ${test:eggs}
     Products.MeetingCharleroi [test]
 environment = testenv
