--- a/communes-dev.cfg
+++ b/communes-dev.cfg
@@ -24,5 +24,6 @@ Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCommunes']
 eggs =
+    ${test:eggs}
     Products.MeetingCommunes [test]
 environment = testenv
