--- a/dev.cfg
+++ b/dev.cfg
@@ -82,6 +82,7 @@ defaults = ['--auto-color', '--auto-progress', '-s', 'Products.PloneMeeting']
 #include-site-packages = true
 eggs =
     Products.PloneMeeting [test]
+    ${zope-conf:solr-eggs}
 environment = testenv
 
 [testenv]
