--- a/hainaut-prov-dev.cfg
+++ b/hainaut-prov-dev.cfg
@@ -29,5 +29,6 @@ Products.MeetingPROVHainaut = git ${remotes:imio}/Products.MeetingPROVHainaut.gi
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingPROVHainaut']
 eggs =
+    ${test:eggs}
     Products.MeetingPROVHainaut [test]
 environment = testenv
