--- a/idea-dev.cfg
+++ b/idea-dev.cfg
@@ -17,5 +17,6 @@ Products.MeetingIDEA = git ${remotes:imio}/Products.MeetingIDEA.git pushurl=${re
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingIDEA']
 eggs =
+    ${test:eggs}
     Products.MeetingIDEA [test]
 environment = testenv
