--- a/lalouviere-cpas-dev.cfg
+++ b/lalouviere-cpas-dev.cfg
@@ -27,5 +27,6 @@ Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouvi
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCPASLalouviere']
 eggs =
+    ${test:eggs}
     Products.MeetingCPASLalouviere [test]
 environment = testenv
