--- a/lalouviere-dev.cfg
+++ b/lalouviere-dev.cfg
@@ -17,5 +17,6 @@ Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git 
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingLalouviere']
 eggs =
+    ${test:eggs}
     Products.MeetingLalouviere [test]
 environment = testenv
