--- a/liege-dev.cfg
+++ b/liege-dev.cfg
@@ -23,5 +23,6 @@ Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingLiege']
 eggs =
+    ${test:eggs}
     Products.MeetingLiege[test]
 environment = testenv
