--- a/mons-dev.cfg
+++ b/mons-dev.cfg
@@ -17,5 +17,6 @@ Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${re
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingMons']
 eggs =
+    ${test:eggs}
     Products.MeetingMons [test]
 environment = testenv
