--- a/namur-dev.cfg
+++ b/namur-dev.cfg
@@ -27,5 +27,6 @@ Products.MeetingNamur = git ${remotes:imio}/Products.MeetingNamur.git pushurl=${
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingNamur']
 eggs =
+    ${test:eggs}
     Products.MeetingNamur [test]
 environment = testenv
