--- a/seraing-dev.cfg
+++ b/seraing-dev.cfg
@@ -27,5 +27,6 @@ Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushur
 recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingSeraing']
 eggs =
+    ${test:eggs}
     Products.MeetingSeraing [test]
 environment = testenv
