--- a/solr.cfg
+++ b/solr.cfg
@@ -6,6 +6,11 @@ parts +=
     core-prop
     solr
 
+[zope-conf]
+solr-eggs =
+    collective.solr
+    collective.indexing
+
 [versions]
 Genshi = 0.7.1
 PyJWT = 1.7.1
@@ -26,20 +31,7 @@ pyrsistent = 0.15.2
 six = 1.11.0
 
 [instance1]
-eggs+= collective.solr
-       collective.indexing
-
-[test]
-eggs+= collective.solr
-       collective.indexing
-
-[testmc]
-eggs+= collective.solr
-       collective.indexing
-
-[testliege]
-eggs+= collective.solr
-       collective.indexing
+eggs += ${zope-conf:solr-eggs}
 
 [core-prop]
 recipe = collective.recipe.template
