--- a/dev.cfg
+++ b/dev.cfg
@@ -90,6 +90,7 @@ zope_i18n_compile_mo_files = true
 ENV = dev
 OO_PORT = ${port:oo-port}
 PYTHON_UNO = ${port:python-uno}
+SOLR_PORT = ${port:instance-solr-http}
 
 # create bin/coverage commant
 [coverage]
