--- a/solr.cfg
+++ b/solr.cfg
@@ -18,7 +18,7 @@ attrs = 19.1.0
 collective.indexing = 2.1
 collective.js.showmore = 1.0a4
 collective.recipe.solrinstance = 5.3.3
-collective.solr = 7.0.0a2
+collective.solr = 8.0.0a1
 functools32 = 3.2.3-2
 gocept.download = 0.9.5
 hexagonit.recipe.download = 1.7.1
@@ -32,6 +32,7 @@ six = 1.11.0
 
 [instance1]
 eggs += ${zope-conf:solr-eggs}
+environment-vars = SOLR_PORT ${port:instance-solr-http}
 
 [core-prop]
 recipe = collective.recipe.template
@@ -40,7 +41,7 @@ output = ${port:solr-config}/core.properties
 
 [solr]
 recipe = kitconcept.recipe.solr
-src = http://archive.apache.org/dist/lucene/solr/7.4.0/solr-7.4.0.tgz
+src = http://archive.apache.org/dist/lucene/solr/8.2.0/solr-8.2.0.tgz
 solr-config = ${port:solr-config}
 port = ${port:instance-solr-http}
 java_opts =
