Prepare next release

--- a/hainaut-prov-dev.cfg
+++ b/hainaut-prov-dev.cfg
@@ -3,7 +3,9 @@
 extends =
     dev.cfg
 
-auto-checkout +=
+auto-checkout =
+    Products.PloneMeeting
+    imio.pm.locales
     Products.MeetingCommunes
     Products.MeetingPROVHainaut
 
