Use : Products.MeetingCommunes = 4.1 Products.PloneMeeting = 4.1.2 collective.contact.plonegroup = 1.21 collective.eeafaceted.z3ctable = 2.7 imio.actionspanel = 1.44

--- a/hainaut-prov.cfg
+++ b/hainaut-prov.cfg
@@ -13,5 +13,5 @@ zcml +=
     imio.pm.locales
 
 [versions]
-Products.MeetingCommunes = 4.1rc9
+Products.MeetingCommunes = 4.1
 Products.MeetingPROVHainaut = 4.1rc2
