--- a/versions.cfg
+++ b/versions.cfg
@@ -4,7 +4,7 @@ setuptools = 38.2.4
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.1.2
+Products.PloneMeeting = 4.1.3
 
 # Required by:
 # Products.PloneMeeting
@@ -42,7 +42,7 @@ imio.dashboard = 2.6
 imio.helpers = 0.23
 imio.migrator = 1.16
 imio.history = 1.18
-imio.pm.locales = 4.1rc5
+imio.pm.locales = 4.1rc6
 imio.prettylink = 1.14
 imio.pyutils = 0.11
 plone.app.versioningbehavior = 1.3.1
@@ -164,27 +164,12 @@ python-archive = 0.2
 zc.recipe.cmmi = 2.0.0
 
 #Required by:
-#imio.pm.ws 1.0
+#imio.pm.ws
 ZSI = 2.1a2-imio1
-
-#Required by:
-#imio.pm.ws 1.0
 z3c.soap = 0.5.5
-
-#Required by:
-#imio.pm.ws 1.0
 archetypes.schemaextender = 2.1.2
-
-#Required by:
-#imio.pm.ws 1.0
 BeautifulSoup = 3.2.1
-
-#Required by:
-#imio.pm.ws 1.0
 python-magic = 0.4.6
-
-#Required by:
-#SOAPpy 0.12.5
 wstools = 0.4.6
 
 #Required by:
@@ -195,7 +180,7 @@ fpconst = 0.7.2
 SOAPpy = 0.12.5
 suds-jurko = 0.6
 
-imio.pm.ws = 2.7
+imio.pm.ws = 2.8
 imio.pm.wsclient = 1.13
 
 plone.app.async = 1.6
