--- a/charleroi.cfg
+++ b/charleroi.cfg
@@ -13,5 +13,5 @@ zcml +=
     imio.pm.locales
 
 [versions]
-Products.MeetingCommunes = 4.1
-Products.MeetingCharleroi = 4.1rc6
+Products.MeetingCommunes = 4.1.1
+Products.MeetingCharleroi = 4.1
