--- a/bep.cfg
+++ b/bep.cfg
@@ -12,5 +12,5 @@ zcml +=
     Products.MeetingCommunes
 
 [versions]
-Products.MeetingCommunes = 4.1.2
-Products.MeetingBEP = 4.1b3
+Products.MeetingCommunes = 4.1.3
+Products.MeetingBEP = 4.1
