--- a/solr.cfg
+++ b/solr.cfg
@@ -36,15 +36,18 @@ environment-vars = SOLR_PORT ${port:instance-solr-http}
 
 [core-prop]
 recipe = collective.recipe.template
+min-ram = 128M
+max-ram = 1024M
+config = config/default
 input = config/core.properties.tmpl
-output = ${port:solr-config}/core.properties
+output = ${core-prop:config}/core.properties
 
 [solr]
 recipe = kitconcept.recipe.solr
 src = http://archive.apache.org/dist/lucene/solr/7.4.0/solr-7.4.0.tgz
-solr-config = ${port:solr-config}
+solr-config = ${core-prop:config}
 port = ${port:instance-solr-http}
 java_opts =
     -server
-    -Xms${port:solr-min-ram}
-    -Xmx${port:solr-max-ram}
+    -Xms${core-prop:min-ram}
+    -Xmx${core-prop:max-ram}
