Added cfg for plonemeeting.restapi

--- a/dev.cfg
+++ b/dev.cfg
@@ -77,7 +77,7 @@ zcml +=
 # create bin/test command
 [test]
 recipe = zc.recipe.testrunner
-defaults = ['--auto-color', '--auto-progress', '-s', 'Products.PloneMeeting']
+defaults = ['--auto-color', '--auto-progress']
 #extra-paths = ${buildout:directory}/parts/omelette
 #include-site-packages = true
 eggs =
