Use imio.restapi sources for now

--- a/restapi.cfg
+++ b/restapi.cfg
@@ -1,6 +1,7 @@
 [buildout]
 
 auto-checkout +=
+    imio.restapi
     plonemeeting.restapi
 
 [instance1]
@@ -11,6 +12,7 @@ zcml +=
 
 [sources]
 plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=master
+imio.restapi = git ${remotes:imio}/imio.restapi.git pushurl=${remotes:imio_push}/imio.restapi.git branch=master
 
 [test]
 eggs +=
