Use collective.iconifiedcategory = 0.38 in production and v0.39 with restapi.cfg so publishable functionnality is available

--- a/restapi.cfg
+++ b/restapi.cfg
@@ -33,6 +33,8 @@ pathlib2 = 2.3.5
 contextlib2 = 0.6.0.post1
 more-itertools = 5.0.0
 scandir = 1.10.0
+# include publishable management
+collective.iconifiedcategory = 0.39
 
 # tests
 plone.tiles = 2.2.1
