Includes restapi in default dev profile

--- a/dev.cfg
+++ b/dev.cfg
@@ -20,6 +20,7 @@ auto-checkout =
     imio.history
     imio.migrator
     imio.prettylink
+    imio.restapi
     collective.behavior.talcondition
 #    collective.ckeditor
     collective.compoundcriterion
@@ -47,6 +48,7 @@ auto-checkout =
     imio.pm.ws
     imio.zamqp.core
     imio.zamqp.pm
+    plonemeeting.restapi
     plonetheme.imioapps
 #    Products.CPUtils
     Products.PloneMeeting
@@ -82,6 +84,7 @@ defaults = ['--auto-color', '--auto-progress']
 #include-site-packages = true
 eggs =
     Products.PloneMeeting [test]
+    plonemeeting.restapi [test]
     ${zope-conf:solr-eggs}
 environment = testenv
 
