--- a/restapi.cfg
+++ b/restapi.cfg
@@ -1,24 +1,13 @@
-[buildout]
-
-auto-checkout +=
-    imio.restapi
-    plonemeeting.restapi
-
 [instance1]
 eggs +=
     plonemeeting.restapi
 zcml +=
     plonemeeting.restapi
 
-[sources]
-plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=master
-imio.restapi = git ${remotes:imio}/imio.restapi.git pushurl=${remotes:imio_push}/imio.restapi.git branch=master
-
-[test]
-eggs +=
-    plonemeeting.restapi[test]
-
 [versions]
+imio.restapi = 1.0a2
+plonemeeting.restapi = 1.0a1
+
 plone.restapi = 5.0.2
 PyJWT = 1.7.1
 plone.schema = 1.2.0
@@ -39,4 +28,3 @@ collective.iconifiedcategory = 0.39
 # tests
 plone.tiles = 2.2.1
 collective.MockMailHost = 2.0.0
-
