--- a/sources.cfg
+++ b/sources.cfg
@@ -53,5 +53,8 @@ Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:im
 Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
+plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=master
+imio.restapi = git ${remotes:imio}/imio.restapi.git pushurl=${remotes:imio_push}/imio.restapi.git branch=master
+
 [port]
 public-url =
