--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -35,3 +35,5 @@ collective.profiler = 0.3
 dexterity.localrolesfield = 1.2
 dexterity.localroles = 1.3
 ecreall.helpers.testing = 1.7
+
+testfixtures = 6.10.3
