Test plonemeeting.restapi only when resatpi.cfg is included

--- a/restapi.cfg
+++ b/restapi.cfg
@@ -4,6 +4,10 @@ eggs +=
 zcml +=
     plonemeeting.restapi
 
+[test]
+eggs +=
+    plonemeeting.restapi
+
 [versions]
 imio.restapi = 1.0a2
 plonemeeting.restapi = 1.0a1
