Update solr version to 7.7.2 and collective solr 8

--- a/solr.cfg
+++ b/solr.cfg
@@ -18,7 +18,7 @@ attrs = 19.1.0
 collective.indexing = 2.1
 collective.js.showmore = 1.0a4
 collective.recipe.solrinstance = 5.3.3
-collective.solr = 7.0.0a2
+collective.solr = 8.0.0a5
 functools32 = 3.2.3-2
 gocept.download = 0.9.5
 hexagonit.recipe.download = 1.7.1
@@ -34,6 +34,9 @@ six = 1.11.0
 eggs += ${zope-conf:solr-eggs}
 environment-vars = SOLR_PORT ${port:instance-solr-http}
 
+[testenv]
+SOLR_PORT = ${port:instance-solr-http}
+
 [core-prop]
 recipe = collective.recipe.template
 min-ram = 128M
@@ -44,7 +47,7 @@ output = ${core-prop:config}/core.properties
 
 [solr]
 recipe = kitconcept.recipe.solr
-src = http://archive.apache.org/dist/lucene/solr/7.4.0/solr-7.4.0.tgz
+src = http://archive.apache.org/dist/lucene/solr/7.7.2/solr-7.7.2.tgz
 solr-config = ${core-prop:config}
 port = ${port:instance-solr-http}
 java_opts =
