Fix environment-vars for instance

--- a/solr.cfg
+++ b/solr.cfg
@@ -32,7 +32,7 @@ six = 1.11.0
 
 [instance1]
 eggs += ${zope-conf:solr-eggs}
-environment-vars = SOLR_PORT ${port:instance-solr-http}
+environment-vars += SOLR_PORT ${port:instance-solr-http}
 
 [testenv]
 SOLR_PORT = ${port:instance-solr-http}
