Fix version conflict in solr.cfg

--- a/solr.cfg
+++ b/solr.cfg
@@ -2,6 +2,9 @@
 # call /@@solr-maintenance/reindex to index in solr
 
 [buildout]
+extends =
+    restapi.cfg
+
 parts +=
     core-prop
     solr
@@ -11,24 +14,20 @@ solr-eggs =
     collective.solr
     collective.indexing
 
+
 [versions]
-Genshi = 0.7.1
-PyJWT = 1.7.1
-attrs = 19.1.0
+collective.solr = 8.0.0a5
+kitconcept.recipe.solr = 1.0.0a5
+
+# Required by:
+# collective.solr==8.0.0a5
 collective.indexing = 2.1
 collective.js.showmore = 1.0a4
-collective.recipe.solrinstance = 5.3.3
-collective.solr = 8.0.0a5
-functools32 = 3.2.3-2
-gocept.download = 0.9.5
+
+# Required by:
+# kitconcept.recipe.solr==1.0.0a5
 hexagonit.recipe.download = 1.7.1
-jsonschema = 3.0.1
-kitconcept.recipe.solr = 1.0.0a3
-plone.rest = 1.4.0
-plone.restapi = 4.1.4
-plone.schema = 1.2.0
-pyrsistent = 0.15.2
-six = 1.11.0
+
 
 [instance1]
 eggs += ${zope-conf:solr-eggs}
