Use version of restapi.cfg instead of extending it

--- a/solr.cfg
+++ b/solr.cfg
@@ -2,9 +2,6 @@
 # call /@@solr-maintenance/reindex to index in solr
 
 [buildout]
-extends =
-    restapi.cfg
-
 parts +=
     core-prop
     solr
@@ -27,6 +24,21 @@ collective.js.showmore = 1.0a4
 # Required by:
 # kitconcept.recipe.solr==1.0.0a5
 hexagonit.recipe.download = 1.7.1
+
+plone.restapi = 5.0.2
+PyJWT = 1.7.1
+plone.schema = 1.2.0
+plone.rest = 1.6.0
+jsonschema = 3.1.1
+six = 1.13.0
+pyrsistent = 0.15.5
+importlib-metadata = 0.23
+attrs = 19.3.0
+zipp = 0.6.0
+pathlib2 = 2.3.5
+contextlib2 = 0.6.0.post1
+more-itertools = 5.0.0
+scandir = 1.10.0
 
 
 [instance1]
