--- a/versions.cfg
+++ b/versions.cfg
@@ -55,6 +55,7 @@ simplejson = 3.13.2
 vobject = 0.9.5
 z3c.unconfigure = 1.1
 zope.configuration = 3.8.1
+six = 1.14.0
 
 #Required by:
 #imio.annex
