Make bin/testmc available

--- a/hainaut-prov-dev.cfg
+++ b/hainaut-prov-dev.cfg
@@ -10,6 +10,7 @@ auto-checkout =
     Products.MeetingPROVHainaut
 
 parts +=
+    testmc
     testhainaut
 
 [instance1]
@@ -26,6 +27,14 @@ Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${
 imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git branch=MPMPHAI-21_custom_validation_levels_for_item
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=MPMPHAI-21_custom_validation_levels_for_item
 Products.MeetingPROVHainaut = git ${remotes:imio}/Products.MeetingPROVHainaut.git pushurl=${remotes:imio_push}/Products.MeetingPROVHainaut.git branch=MPMPHAI-21_custom_validation_levels_for_item
+
+[testmc]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress', '-s', 'Products.MeetingCommunes']
+eggs =
+    ${test:eggs}
+    Products.MeetingCommunes [test]
+environment = testenv
 
 [testhainaut]
 recipe = zc.recipe.testrunner
