Use Products.PloneMeeting = 4.2a1, Products.MeetingCommunes = 4.2a1, Products.MeetingPROVHainaut = 4.2a1, imio.pm.locales = 4.2a1

--- a/hainaut-prov.cfg
+++ b/hainaut-prov.cfg
@@ -13,5 +13,7 @@ zcml +=
     imio.pm.locales
 
 [versions]
-Products.MeetingCommunes = 4.1.6
-Products.MeetingPROVHainaut = 4.1rc2
+Products.PloneMeeting = 4.2a1
+Products.MeetingCommunes = 4.2a1
+Products.MeetingPROVHainaut = 4.2a1
+imio.pm.locales = 4.2a1
