--- a/dev.cfg
+++ b/dev.cfg
@@ -52,6 +52,7 @@ auto-checkout =
     plonetheme.imioapps
 #    Products.CPUtils
     Products.PloneMeeting
+    collective.solr
 
 # do mr.developer not fail with invalid subversion https certificates
 always-accept-server-certificate = true
