--- a/solr.cfg
+++ b/solr.cfg
@@ -7,7 +7,7 @@ parts +=
     solr
 
 auto-checkout =
-    collective.solr
+#    collective.solr
 
 [zope-conf]
 solr-eggs =
@@ -16,7 +16,7 @@ solr-eggs =
 
 
 [versions]
-collective.solr = 8.0.0a8
+collective.solr = 8.0.0a9
 kitconcept.recipe.solr = 1.0.0a5
 
 # Required by:
