auto-checkout plonetheme.imioapps in dev.cfg

--- a/dev.cfg
+++ b/dev.cfg
@@ -49,7 +49,7 @@ auto-checkout =
     imio.zamqp.core
     imio.zamqp.pm
     plonemeeting.restapi
-#    plonetheme.imioapps
+    plonetheme.imioapps
 #    Products.CPUtils
     Products.PloneMeeting
 
