--- a/seraing-dev.cfg
+++ b/seraing-dev.cfg
@@ -22,6 +22,7 @@ zcml +=
 [sources]
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=master
+plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git rev=2.15
 
 [testseraing]
 recipe = zc.recipe.testrunner
