addapt namur-dev config file

--- a/namur-dev.cfg
+++ b/namur-dev.cfg
@@ -20,8 +20,9 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.0
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 Products.MeetingNamur = git ${remotes:imio}/Products.MeetingNamur.git pushurl=${remotes:imio_push}/Products.MeetingNamur.git branch=master
+plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git rev=2.15
 
 [testnamur]
 recipe = zc.recipe.testrunner
