--- a/dev.cfg
+++ b/dev.cfg
@@ -50,7 +50,7 @@ auto-checkout =
     imio.zamqp.pm
     plonemeeting.restapi
     plonetheme.imioapps
-#    Products.CPUtils
+    Products.CPUtils
     Products.PloneMeeting
 
 # do mr.developer not fail with invalid subversion https certificates
