Adapted idea-dev.cfg for PM41

--- a/idea-dev.cfg
+++ b/idea-dev.cfg
@@ -1,17 +1,27 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    idea.cfg
+    dev.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingIDEA
 
 parts +=
     testidea
 
+[instance1]
+eggs +=
+    Products.MeetingIDEA
+
+zcml +=
+    Products.MeetingIDEA
+    Products.MeetingCommunes
+    imio.pm.locales
+
 [sources]
-Products.MeetingIDEA = git ${remotes:imio}/Products.MeetingIDEA.git pushurl=${remotes:imio_push}/Products.MeetingIDEA.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingIDEA = git ${remotes:imio}/Products.MeetingIDEA.git pushurl=${remotes:imio_push}/Products.MeetingIDEA.git branch=migrate_to_41_MPMIDEAI-4
 
 [testidea]
 recipe = zc.recipe.testrunner
