Define new DEFURL

--- a/lalouviere.cfg
+++ b/lalouviere.cfg
@@ -11,5 +11,8 @@ zcml +=
     Products.MeetingLalouviere
     Products.MeetingCommunes
 
+environment-vars +=
+    DEFURL http://intranetdef.lalouviere.be/
+
 [versions]
 Products.MeetingLalouviere = 4.1
