Update lalouviere profile

--- a/lalouviere.cfg
+++ b/lalouviere.cfg
@@ -1,6 +1,6 @@
 [buildout]
 
-extends +=
+extends =
     communes.cfg
 
 [instance1]
@@ -9,10 +9,9 @@ eggs +=
 
 zcml +=
     Products.MeetingLalouviere
-    Products.MeetingCommunes
 
 environment-vars +=
     DEFURL http://intranetdef.lalouviere.be/
 
 [versions]
-Products.MeetingLalouviere = 4.1
+Products.MeetingLalouviere = 4.1.1rc1
