--- a/versions.cfg
+++ b/versions.cfg
@@ -47,7 +47,8 @@ imio.prettylink = 1.16
 imio.pyutils = 0.11
 plone.app.versioningbehavior = 1.3.1
 plone.formwidget.masterselect = 1.6
-plone.formwidget.namedfile = 2.0.6
+# plone.formwidget.namedfile = 2.0.6 has a display bug when editing existing file
+plone.formwidget.namedfile = 2.0.5
 plonetheme.imioapps = 2.16
 Products.CPUtils = 1.17
 Products.PasswordStrength = 0.4
