--- a/sources.cfg
+++ b/sources.cfg
@@ -51,7 +51,8 @@ imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git
+# keep branch=master used to test branches on jenkins
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
 plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=master
