Jenkins script was adapted ti avoid PloneMeeting source in communes-dev.cfg

--- a/sources.cfg
+++ b/sources.cfg
@@ -51,7 +51,7 @@ imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
-# redefined in communes-dev.cfg to be able to test branches on Jenkins
+# used to test branches on Jenkins, leave branch=master by default
 Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
