--- a/dev.cfg
+++ b/dev.cfg
@@ -83,7 +83,8 @@ defaults = ['--auto-color', '--auto-progress']
 #extra-paths = ${buildout:directory}/parts/omelette
 #include-site-packages = true
 eggs =
-    Products.PloneMeeting [test]
+    Products.PloneMeeting[test]
+    Products.PloneMeeting[amqp]
     ${zope-conf:solr-eggs}
 environment = testenv
 
