Include Products.PloneMeeting[amqp] for backward compat

--- a/base.cfg
+++ b/base.cfg
@@ -120,6 +120,8 @@ eggs =
     collective.monitor
     Products.DocFinderTab
     Products.PloneMeeting
+    # backward compat, to be removed after buildout.pm 4.1.17 is released
+    Products.PloneMeeting[amqp]
     five.z2monitor
     Products.ZNagios
     zc.z3monitor
