--- a/lalouviere.cfg
+++ b/lalouviere.cfg
@@ -14,4 +14,4 @@ environment-vars +=
     DEFURL http://intranetdef.lalouviere.be/
 
 [versions]
-Products.MeetingLalouviere = 4.1.1rc3
+Products.MeetingLalouviere = 4.1.1
