--- a/idea.cfg
+++ b/idea.cfg
@@ -1,6 +1,6 @@
 [buildout]
 
-extends +=
+extends =
     communes.cfg
 
 [instance1]
@@ -9,7 +9,6 @@ eggs +=
 
 zcml +=
     Products.MeetingIDEA
-    Products.MeetingCommunes
 
 [versions]
 Products.MeetingIDEA = 4.1.1
