--- a/idea-dev.cfg
+++ b/idea-dev.cfg
@@ -21,7 +21,7 @@ zcml +=
 
 [sources]
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
-Products.MeetingIDEA = git ${remotes:imio}/Products.MeetingIDEA.git pushurl=${remotes:imio_push}/Products.MeetingIDEA.git branch=migrate_to_41_MPMIDEAI-4
+Products.MeetingIDEA = git ${remotes:imio}/Products.MeetingIDEA.git pushurl=${remotes:imio_push}/Products.MeetingIDEA.git branch=master
 
 [testidea]
 recipe = zc.recipe.testrunner
