Simplified management of profiles .cfg files

--- a/communes.cfg
+++ b/communes.cfg
@@ -3,8 +3,6 @@
 extends =
     prod.cfg
 
-parts +=
-
 [instance1]
 eggs +=
     Products.MeetingCommunes
@@ -13,4 +11,4 @@ zcml +=
     Products.MeetingCommunes
 
 [versions]
-Products.MeetingCommunes = 4.1.11
+# version for Products.MeetingCommunes is defined in versions.cfg
