--- a/mons.cfg
+++ b/mons.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 extends +=
-    communes.cfg
+    prod.cfg
 
 [instance1]
 eggs +=
@@ -9,7 +9,6 @@ eggs +=
 
 zcml +=
     Products.MeetingMons
-    Products.MeetingCommunes
 
 [versions]
 Products.MeetingMons = 4.1
