--- a/versions.cfg
+++ b/versions.cfg
@@ -6,6 +6,9 @@ mr.developer = 2.0.0
 
 Products.PloneMeeting = 4.1.24.1
 
+# profile specific versions
+Products.MeetingCommunes = 4.1.11
+
 # Required by:
 # Products.PloneMeeting
 appy = 0.9.16
