--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -37,3 +37,11 @@ dexterity.localroles = 1.3
 ecreall.helpers.testing = 1.7
 
 testfixtures = 6.10.3
+
+# restapi versions
+plone.restapi = 6.13.1
+plone.schema = 1.2.1
+plone.rest = 1.6.1
+jsonschema = 3.2.0
+pyrsistent = 0.16.0
+importlib-metadata = 1.6.1
