Pin Products.MaatingLalouviere to 4.1.4.2

--- a/lalouviere.cfg
+++ b/lalouviere.cfg
@@ -11,7 +11,7 @@ zcml +=
     Products.MeetingLalouviere
 
 environment-vars +=
-    DEFURL http://intranetdef.lalouviere.be/
+    DEFURL http://intranetdef.lalouviere.be
 
 [versions]
-Products.MeetingLalouviere = 4.1.1
+Products.MeetingLalouviere = 4.1.4.2
