Use plonemeeting.restapi master and develop plone.restapi by default

--- a/dev.cfg
+++ b/dev.cfg
@@ -48,6 +48,7 @@ auto-checkout =
     imio.pm.ws
     imio.zamqp.core
     imio.zamqp.pm
+    plone.restapi
     plonemeeting.restapi
     plonetheme.imioapps
     Products.CPUtils
