Prepare next release using Products.PloneMeeting = 4.1.27

--- a/hainaut-prov.cfg
+++ b/hainaut-prov.cfg
@@ -11,7 +11,16 @@ zcml +=
     Products.MeetingPROVHainaut
 
 [versions]
-Products.PloneMeeting = 4.2a5
-Products.MeetingCommunes = 4.2a3
-Products.MeetingPROVHainaut = 4.2a3
-imio.pm.locales = 4.2a4
+Products.PloneMeeting = 4.2a6
+Products.MeetingCommunes = 4.2a4
+Products.MeetingPROVHainaut = 4.2a4
+imio.pm.locales = 4.2a5
+# restapi versions
+imio.restapi = 1.0a9
+plonemeeting.restapi = 1.0a2
+plone.restapi = 6.13.4
+plone.schema = 1.2.1
+plone.rest = 1.6.1
+jsonschema = 3.2.0
+pyrsistent = 0.16.0
+importlib-metadata = 1.6.1
