--- a/hainaut-prov.cfg
+++ b/hainaut-prov.cfg
@@ -6,9 +6,11 @@ extends =
 [instance1]
 eggs +=
     Products.MeetingPROVHainaut
+    plonemeeting.restapi
 
 zcml +=
     Products.MeetingPROVHainaut
+    plonemeeting.restapi
 
 [versions]
 Products.PloneMeeting = 4.2a7
@@ -19,8 +21,15 @@ imio.pm.locales = 4.2a5
 imio.restapi = 1.0a9
 plonemeeting.restapi = 1.0a2
 plone.restapi = 6.13.4
+PyJWT = 1.7.1
 plone.schema = 1.2.1
 plone.rest = 1.6.1
 jsonschema = 3.2.0
 pyrsistent = 0.16.0
 importlib-metadata = 1.6.1
+attrs = 19.3.0
+zipp = 0.6.0
+pathlib2 = 2.3.5
+contextlib2 = 0.6.0.post1
+more-itertools = 5.0.0
+scandir = 1.10.0
