--- a/mons-dev.cfg
+++ b/mons-dev.cfg
@@ -1,17 +1,27 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
-    mons.cfg
+    dev.cfg
 
 auto-checkout +=
+    Products.MeetingCommunes
     Products.MeetingMons
 
 parts +=
     testmons
 
+[instance1]
+eggs +=
+    Products.MeetingMons
+
+zcml +=
+    Products.MeetingMons
+    Products.MeetingCommunes
+    imio.pm.locales
+
 [sources]
-Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${remotes:imio_push}/Products.MeetingMons.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${remotes:imio_push}/Products.MeetingMons.git branch=meetingmons41_PM-2945
 
 [testmons]
 recipe = zc.recipe.testrunner
