--- a/base.cfg
+++ b/base.cfg
@@ -41,6 +41,7 @@ zeo-address = ${port:zeo}
 eggs = ${instance1:eggs}
 #effective-user = ${instance1:effective-user}
 pack-days = 7
+pack-gc true
 pack-keep-old = false
 monitor-address = ${port:zeo-monitor}
 zeo-conf-additional =
