--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.4'
 services:
+  libreoffice:
+    image: imiobe/libreoffice:debian-buster
+    command: soffice --invisible --headless --nologo --nofirststartwizard --nodefault --accept="socket,host=libreoffice,port=2002,tcpNoDelay=1;urp;StarOffice.ServiceManager"
+    expose:
+      - "2002"
+    volumes:
+      - tmp:/var/tmp
   zeo:
     image: imiobe/iadelib:latest
     volumes:
@@ -26,13 +33,6 @@ services:
         - HOSTNAME_HOST=local
         - PROJECT_ID=plone
         - CUSTOM_TMP=/var/tmp
-    volumes:
-      - tmp:/var/tmp
-  libreoffice:
-    image: imiobe/iadelib:latest
-    command: soffice --invisible --headless --nologo --nofirststartwizard --nodefault --accept="socket,host=libreoffice,port=2002,tcpNoDelay=1;urp;StarOffice.ServiceManager"
-    expose:
-      - "2002"
     volumes:
       - tmp:/var/tmp
 
