formatting improvement on docker files

--- a/docker.cfg
+++ b/docker.cfg
@@ -5,3 +5,8 @@ blob-storage = /data/blobstorage
 [instance1]
 blob-storage = /data/blobstorage
 shared-blob = on
+zeo-address = $(ZEO_ADDRESS)
+
+[instance-async]
+zeo-address = $(ZEO_ADDRESS)
+debug-mode = off
