Use branch 4.1.x for each relevant packages

--- a/bep-dev.cfg
+++ b/bep-dev.cfg
@@ -20,8 +20,8 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingBEP = git ${remotes:imio}/Products.MeetingBEP.git pushurl=${remotes:imio_push}/Products.MeetingBEP.git branch=master
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingBEP = git ${remotes:imio}/Products.MeetingBEP.git pushurl=${remotes:imio_push}/Products.MeetingBEP.git branch=4.1.x
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
 
 [testbep]
 recipe = zc.recipe.testrunner
