--- a/lalouviere-dev.cfg
+++ b/lalouviere-dev.cfg
@@ -11,7 +11,7 @@ parts +=
     testlalouviere
 
 [sources]
-Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingLalouviere.git branch=master
+Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingLalouviere.git branch=4.1.x
 
 [testlalouviere]
 recipe = zc.recipe.testrunner
