--- a/liege-dev.cfg
+++ b/liege-dev.cfg
@@ -17,7 +17,7 @@ zcml +=
     Products.MeetingLiege
 
 [sources]
-Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=master
+Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=4.1.x
 
 [testliege]
 recipe = zc.recipe.testrunner
