--- a/mons-dev.cfg
+++ b/mons-dev.cfg
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
 Products.MeetingMons = git ${remotes:imio}/Products.MeetingMons.git pushurl=${remotes:imio_push}/Products.MeetingMons.git branch=meetingmons41_PM-2945
 
 [testmons]
