--- a/communes-dev.cfg
+++ b/communes-dev.cfg
@@ -17,7 +17,7 @@ zcml +=
     Products.MeetingCommunes
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
 
 [testmc]
 recipe = zc.recipe.testrunner
