--- a/idea-dev.cfg
+++ b/idea-dev.cfg
@@ -20,8 +20,8 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
-Products.MeetingIDEA = git ${remotes:imio}/Products.MeetingIDEA.git pushurl=${remotes:imio_push}/Products.MeetingIDEA.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
+Products.MeetingIDEA = git ${remotes:imio}/Products.MeetingIDEA.git pushurl=${remotes:imio_push}/Products.MeetingIDEA.git branch=4.1.x
 
 [testidea]
 recipe = zc.recipe.testrunner
