--- a/lalouviere-cpas-dev.cfg
+++ b/lalouviere-cpas-dev.cfg
@@ -20,8 +20,8 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
-Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
+Products.MeetingCPASLalouviere = git ${remotes:imio}/Products.MeetingCPASLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingCPASLalouviere.git branch=4.1.x
 
 [testlalouvierecpas]
 recipe = zc.recipe.testrunner
