--- a/seraing-dev.cfg
+++ b/seraing-dev.cfg
@@ -20,8 +20,8 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
-Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
+Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=4.1.x
 
 [testseraing]
 recipe = zc.recipe.testrunner
