--- a/sources.cfg
+++ b/sources.cfg
@@ -44,7 +44,7 @@ imio.dashboard = git ${remotes:imio}/imio.dashboard.git pushurl=${remotes:imio_p
 imio.helpers = git ${remotes:imio}/imio.helpers.git pushurl=${remotes:imio_push}/imio.helpers.git
 imio.history = git ${remotes:imio}/imio.history.git pushurl=${remotes:imio_push}/imio.history.git
 imio.migrator = git ${remotes:imio}/imio.migrator.git pushurl=${remotes:imio_push}/imio.migrator.git
-imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
+imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git branch=4.1.x
 imio.pm.ws = git ${remotes:imio}/imio.pm.ws.git pushurl=${remotes:imio_push}/imio.pm.ws.git
 imio.prettylink = git ${remotes:imio}/imio.prettylink.git pushurl=${remotes:imio_push}/imio.prettylink.git
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
