--- a/versions.cfg
+++ b/versions.cfg
@@ -5,10 +5,10 @@ setuptools = 40.8.0
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
-Products.PloneMeeting = 4.1.28.1
+Products.PloneMeeting = 4.2b1
 
 # profile specific versions
-Products.MeetingCommunes = 4.1.15
+Products.MeetingCommunes = 4.2b1
 
 # Required by:
 # Products.PloneMeeting
@@ -46,7 +46,7 @@ imio.dashboard = 2.8
 imio.helpers = 0.31
 imio.migrator = 1.25
 imio.history = 1.19
-imio.pm.locales = 4.1.17
+imio.pm.locales = 4.2b1
 imio.prettylink = 1.16
 imio.pyutils = 0.11
 plone.app.versioningbehavior = 1.3.1
